--- a/src/app.scss
+++ b/src/app.scss
@@ -2,15 +2,15 @@
 
 .app {
   flex-direction: column;
-  width: 1000px;
-  height: 100%;
+  max-width: 100dvw;
+  height: 100dvh;
   @include utils.flexCenter(flex-start);
 
   .container {
     @include utils.flexCenter(space-between, flex-start, center);
     flex-direction: column;
-    min-width: 700px;
-    height: 850px;
+    min-width: 90dvw;
+    height: 85dvh;
     position: relative;
     width: 100%;
   }
