--- a/src/app.scss
+++ b/src/app.scss
@@ -3,15 +3,20 @@
 .app {
   flex-direction: column;
   max-width: 100dvw;
-  height: 100dvh;
-  @include utils.flexCenter(flex-start);
+  height: 100%;
+  min-height: 100dvh;
+  @include utils.flexCenter(space-between, flex-start, center);
 
   .container {
     @include utils.flexCenter(space-between, flex-start, center);
     flex-direction: column;
     min-width: 90dvw;
-    height: 85dvh;
+    max-width: 100dvw;
+    min-height: 90dvh;
+    max-height: 100dvh;
     position: relative;
     width: 100%;
+    height: 100%;
   }
 }
+
